Project kernel: first running example

--- a/scai/kernel/CMakeLists.txt
+++ b/scai/kernel/CMakeLists.txt
@@ -70,8 +70,6 @@ include ( ConcludeFlags )
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
 
 add_definitions ( -D${SCAI_LOGGING_FLAG} )
-add_definitions ( -D${SCAI_OMP_SCHEDULE_FLAG} )
-add_definitions ( -D${SCAI_TRACING_FLAG} )
 
 add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
 
@@ -98,7 +96,7 @@ scai_project (
     CLASSES                  # .cpp, .hpp
 
         ContextFunction
-        KernelRegistry
+        KernelInterface
 )
 
 ## add CUDA if supported
@@ -108,7 +106,7 @@ if    ( CUDA_FOUND AND USE_CUDA )
 endif ( CUDA_FOUND AND USE_CUDA )
 
 ## add subdirectories
-# add_subdirectory ( examples )
+add_subdirectory ( examples )
 # add_subdirectory ( test )
 
 ## add library
