cleanup lama.hpp, make.inc.in; make examples run in installation dir

--- a/scai/lama/examples/Makefile
+++ b/scai/lama/examples/Makefile
@@ -2,11 +2,12 @@ all: makeAll
 
 clean: makeAllClean
 
-DIRS = lecture \
-       tutorial \
-       bench \
+DIRS = bench \
+	   labelrank \
+	   lecture \
+       solver \
        spy \
-       solver
+       tutorial
 
 makeAll:
 	for dir in $(DIRS); do \
