Redesigned kernel interface for naming

--- a/scai/kernel/CMakeLists.txt
+++ b/scai/kernel/CMakeLists.txt
@@ -97,6 +97,10 @@ scai_project (
 
         ContextFunction
         KernelInterface
+
+    HEADERS
+
+        KernelContextFunction
 )
 
 ## add CUDA if supported
