--- a/scai/lama/test/ccajen.sh.in
+++ b/scai/lama/test/ccajen.sh.in
@@ -51,22 +51,26 @@ ${path_lcov} --base-directory ../.. --directory ../.. --zerocounters
 
 cd ..
 
-export SCAI_LOG=ERROR
-
-#for i in TRACE DEBUG INFO WARN ERROR OFF # TRACE DEBUG INFO WARN are causing failures
+#for j in TRACE DEBUG INFO WARN ERROR OFF # TRACE DEBUG INFO WARN are causing failures
 #do
+
+export SCAI_LOG=TRACE # $j
+
     
-#for i in VT TIME SIMPLE OFF #SIMPLE causes failure
-for i in VT TIME OFF 
+for i in time time:thread
 do
 
-	export SCAI_TRACE_LEVEL=$i
-	echo SCAI_TRACE_LEVEL=$i
+	export SCAI_TRACE=$i
+	echo SCAI_TRACE=$i
 	
 	# Running tests serial
 	echo "Running serial tests"
 	./lama_test >/dev/null
-	error_count=$(($error_count + $?))
+	if [ $? -ne 0 ]
+	then
+		echo "ERROR in lama_test"
+		error_count=$(($error_count + $?))
+	fi
 	
 	if [ -d distributed ];
 	then
@@ -74,14 +78,22 @@ do
 		cd distributed
 		echo "Running distributed tests serial"
 		./lama_dist_test >/dev/null
-	    error_count=$(($error_count + $?))
+		if [ $? -ne 0 ]
+		then
+			echo "ERROR in lama_dist_test"
+			error_count=$(($error_count + $?))
+		fi
 	
-		#for i in 2 3 4;
-		#do
-		#	echo "Running distributed tests with $i processes"
-		#	mpirun -np $i ./lama_dist_test >/dev/null
-		#	error_count=$(($error_count + $?))
-		#done
+		for i in 2 3 4;
+		do
+			echo "Running distributed tests with $i processes"
+			mpirun -np $i ./lama_dist_test >/dev/null
+			if [ $? -ne 0 ]
+			then
+				echo "ERROR in lama_dist_test"
+				error_count=$(($error_count + $?))
+			fi
+		done
 		cd ..
 	fi
 	
@@ -91,7 +103,11 @@ do
 		cd cuda
 		echo "Running cuda tests"
 		./lama_cuda_test >/dev/null
-	    error_count=$(($error_count + $?))
+		if [ $? -ne 0 ]
+		then
+			echo "ERROR in lama_cuda_test"
+			error_count=$(($error_count + $?))
+		fi
 		cd ..
 	fi
 
@@ -101,16 +117,29 @@ cd ${dirname}
 
 #Running lcov and creating data
 ${path_lcov} --base-directory ../.. --directory ../.. --capture --output-file=data.info
-error_count=$(($error_count + $?))
+if [ $? -ne 0 ]
+then
+	echo "ERROR in running lcov"
+	error_count=$(($error_count + $?))
+fi
 
 #Extracting just Sourcefiles from LAMA/src/*
 ${path_lcov} --extract data.info "@CMAKE_SOURCE_DIR@/*" --output-file=data.info
-error_count=$(($error_count + $?))
+if [ $? -ne 0 ]
+then
+	echo "ERROR in extracting lcov data"
+	error_count=$(($error_count + $?))
+fi
 
 # Generating html-structure
 ${path_genhtml} data.info
-error_count=$(($error_count + $?))
+if [ $? -ne 0 ]
+then
+	echo "ERROR in generating html-structure"
+	error_count=$(($error_count + $?))
+fi
 
-if [[ $error_count != 0 ]] ; then
+if [[ $error_count != 0 ]]
+then
     exit 1
 fi
