Renaming to kregistry, KernelRegistry

--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -93,6 +93,7 @@ scai_project (
         Complex
         Printable
         ScalarType
+        ContextType
         Settings
         Thread
         Walltime
