--- a/scai/kregistry/CMakeLists.txt
+++ b/scai/kregistry/CMakeLists.txt
@@ -54,11 +54,11 @@ endif ( NOT SCAI_COMPLETE_BUILD )
 include ( InternalDependencies )
 include ( ExternalDependencies )
 
-foreach    ( module ${SCAI_KERNEL_EXTERNAL_DEPS} )
+foreach    ( module ${SCAI_KREGISTRY_EXTERNAL_DEPS} )
     include( Package/${module} )
-endforeach ( module ${SCAI_KERNEL_EXTERNAL_DEPS} )
+endforeach ( module ${SCAI_KREGISTRY_EXTERNAL_DEPS} )
 
-foreach    ( PACKAGE_TO_FIND ${SCAI_KERNEL_INTERNAL_DEPS} )
+foreach    ( PACKAGE_TO_FIND ${SCAI_KREGISTRY_INTERNAL_DEPS} )
     find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
 endforeach ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
 
@@ -80,10 +80,10 @@ endif ( WIN32 )
 ## Project System-Include
 include_directories ( ../.. )
 
-foreach    ( module ${SCAI_KERNEL_INTERNAL_DEPS} ${SCAI_KERNEL_EXTERNAL_DEPS} )
+foreach    ( module ${SCAI_KREGISTRY_INTERNAL_DEPS} ${SCAI_KREGISTRY_EXTERNAL_DEPS} )
 	string ( TOUPPER ${module} upper_module )
     include_directories( ${${upper_module}_INCLUDE_DIR} )
-endforeach ( module ${SCAI_KERNEL_INTERNAL_DEPS} ${SCAI_KERNEL_EXTERNAL_DEPS} )
+endforeach ( module ${SCAI_KREGISTRY_INTERNAL_DEPS} ${SCAI_KREGISTRY_EXTERNAL_DEPS} )
 
 ### build library
 
@@ -118,17 +118,17 @@ add_subdirectory ( test )
 add_library ( scai_kregistry ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 
 ## add link libraries
-list ( REVERSE SCAI_KERNEL_INTERNAL_DEPS )
-foreach    ( module ${SCAI_KERNEL_INTERNAL_DEPS} )
+list ( REVERSE SCAI_KREGISTRY_INTERNAL_DEPS )
+foreach    ( module ${SCAI_KREGISTRY_INTERNAL_DEPS} )
 	string ( TOUPPER ${module} upper_module )
-	set ( KERNEL_LINK_LIBRARIES ${KERNEL_LINK_LIBRARIES} ${${upper_module}_LIBRARY} )
-endforeach ( module ${SCAI_KERNEL_INTERNAL_DEPS} )
-target_link_libraries ( scai_kregistry ${SCAI_START_LINK_LIBRARIES} ${KERNEL_LINK_LIBRARIES} ${SCAI_END_LINK_LIBRARIES} )
+	set ( KREGISTRY_LINK_LIBRARIES ${KREGISTRY_LINK_LIBRARIES} ${${upper_module}_LIBRARY} )
+endforeach ( module ${SCAI_KREGISTRY_INTERNAL_DEPS} )
+target_link_libraries ( scai_kregistry ${SCAI_START_LINK_LIBRARIES} ${KREGISTRY_LINK_LIBRARIES} ${SCAI_END_LINK_LIBRARIES} )
 
-foreach    ( module ${SCAI_KERNEL_EXTERNAL_DEPS} )
+foreach    ( module ${SCAI_KREGISTRY_EXTERNAL_DEPS} )
 	string ( TOUPPER ${module} upper_module )
     target_link_libraries ( scai_kregistry ${SCAI_${upper_module}_LIBRARIES} )
-endforeach ( module ${SCAI_KERNEL_EXTERNAL_DEPS} )
+endforeach ( module ${SCAI_KREGISTRY_EXTERNAL_DEPS} )
 
 ### install
 
