All interfaces changed.

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -111,7 +111,7 @@ scai_project(
 
         CommunicationPlan
         Communicator
-#       DenseVector
+        DenseVector
         Distributed
         LAMAArrayUtils
 #        LAMAArrayView
