Renamed Interface structs to KernelTrait

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -122,8 +122,8 @@ scai_project(
 
     HEADERS
 
-        BLASInterface
-        UtilsInterface
+        BLASKernelTrait
+        UtilKernelTrait
         CRTPCommunicator
     )
 
