Splitted Kernel Traits in separate files.

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -124,6 +124,12 @@ scai_project(
 
         BLASKernelTrait
         UtilKernelTrait
+        CSRKernelTrait
+        DenseKernelTrait
+        DIAKernelTrait
+        ELLKernelTrait
+        COOKernelTrait
+        JDSKernelTrait
         CRTPCommunicator
     )
 
