Removed SyncToken from all kernel interfaces.

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -130,6 +130,11 @@ scai_project(
         ELLKernelTrait
         COOKernelTrait
         JDSKernelTrait
+
+        LAMAKernel
+
+        cblas
+
         CRTPCommunicator
     )
 
