Fixed problems with Read/Write on same LAMA array

--- a/scai/hmemo/examples/cuda/CMakeLists.txt
+++ b/scai/hmemo/examples/cuda/CMakeLists.txt
@@ -40,7 +40,7 @@ foreach ( executable CUSparseExample MemBandwidth )
     target_link_libraries( ${executable} scai_hmemo )
 endforeach ( executable )
 
-foreach ( executable Example1 Example2 Devices CUDABenchContext )
+foreach ( executable Example1 Example2 Devices CUDABenchContext AliasProblem )
     cuda_add_executable( ${executable} ${executable}.cu )
     target_link_libraries( ${executable} scai_hmemo )
 endforeach ( executable )
