--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -48,6 +48,9 @@ endif ( OPENMP_FOUND AND USE_OPENMP )
 add_library( module SHARED Module.cpp )
 target_link_libraries( module scai_common )
 
+# example of a library module ( no use of other LAMA stuff )
+add_library( dummy_module SHARED DummyModule.cpp )
+
 foreach ( executable ExceptionDemo CriticalRegion Barrier DemoFactory DemoFactory1 DemoPointer UseModule )
     add_executable ( ${executable} ${executable}.cpp )
     target_link_libraries ( ${executable} scai_common )
