Clean up of CUDA kernels

--- a/scai/lama/cuda/CMakeLists.txt
+++ b/scai/lama/cuda/CMakeLists.txt
@@ -31,17 +31,7 @@
  # @since 1.0.0
 ###
 
-if    ( CUSPARSE_V2 )
-	set ( CUSparseCSRUtils CUSparseCSRUtils )
-else ( CUSPARSE_V2 )
-	set ( CUSparseCSRUtils )
-endif ( CUSPARSE_V2 )
-
-### Add classes and header files ###
-
-scai_project(
-
-    CLASSES      # .cpp, .hpp
+set( CLASSES      # .cpp, .hpp
 
         CUDABLAS1
         CUDABLAS2
@@ -49,8 +39,9 @@ scai_project(
         CUDALAPACK
         CUDASettings
         CUDATexture
+)
 
-    CUDA_CLASSES  # .cu, .hpp
+set( CUDA_CLASSES  # .cu, .hpp
 
         CUDAUtils
         CUDACOOUtils
@@ -58,16 +49,33 @@ scai_project(
         CUDADIAUtils
         CUDAELLUtils
         CUDAJDSUtils
-        ${CUSparseCSRUtils}
+        CUSparseCSRUtils
+)
 
-    CUDA_SOURCES   # .cu
+set( CUDA_SOURCES   # .cu
 
         blas1
+) 
 
-    HEADERS        # .hpp
+set ( HEADERS        # .hpp
 
         CUDATexVector
         lama_cublas
+)
+
+
+if    ( CUSPARSE_V2 )
+	set ( set CLASSES ${CLASSES} CUSparseCSRUtils )
+endif ( CUSPARSE_V2 )
+
+### Add classes and header files ###
+
+scai_project(
+
+    CLASSES ${CLASSES} 
+    CUDA_CLASSES ${CUDA_CLASSES}
+    CUDA_SOURCES ${CUDA_SOURCES}
+    HEADERS ${HEADERS}
 
     ADD_PARENT_SCOPE
 )
