--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -55,6 +55,7 @@ if    ( NOT SCAI_COMPLETE_BUILD )
 	include ( SetBuildFlags )
 	include ( SCAIAssert )
 	include ( SetCPPFlags )
+	include ( Package/Sphinx )
 else  ( NOT SCAI_COMPLETE_BUILD )
 	include ( Functions/CheckValueAtCompleteBuild )
 	CheckValueAtCompleteBuild ( logging )
@@ -62,7 +63,7 @@ endif ( NOT SCAI_COMPLETE_BUILD )
 
 ### include all search packages
 include ( InternalDependencies )
-#no external dependencies
+# no external dependencies
 
 foreach    ( PACKAGE_TO_FIND ${SCAI_LOGGING_INTERNAL_DEPS} )
     find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
