--- a/scai/tracing/doc/CMakeLists.txt
+++ b/scai/tracing/doc/CMakeLists.txt
@@ -31,11 +31,10 @@
  # @since 1.0.1
 ###
 
-find_package ( Sphinx ${SCAI_FIND_PACKAGE_FLAGS} )
 
 ### SPHINX DOCUMENTATION ###
 
-if ( SPHINX_FOUND AND BUILD_DOC )
+if ( BUILD_DOC )
     ### install ###
     set ( LAMA_DOC_DIR "${CMAKE_SOURCE_DIR}/doc" )
     set ( SPHINX_BUILD_ROOT "${CMAKE_CURRENT_BINARY_DIR}" )
@@ -67,4 +66,4 @@ if ( SPHINX_FOUND AND BUILD_DOC )
         DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/
         DESTINATION ${SPHINX_INSTALL_ROOT}
     )
-endif ( SPHINX_FOUND AND BUILD_DOC )
+endif ( BUILD_DOC )
