Some appropriate replaces of int with IndexType, added MemoryException in hmemo

--- a/scai/hmemo/CMakeLists.txt
+++ b/scai/hmemo/CMakeLists.txt
@@ -131,6 +131,7 @@ if    ( USE_MIC )
 endif ( USE_MIC )
 
 ## add subdirectories
+add_subdirectory ( exception )
 add_subdirectory ( examples )
 add_subdirectory ( test )
 
