Introduced Wrapper for LAPACK and LAPACKe

--- a/scai/blaskernel/external/CMakeLists.txt
+++ b/scai/blaskernel/external/CMakeLists.txt
@@ -39,6 +39,8 @@ set( CLASSES
 
 set( HEADERS
         BLASWrapper
+        LAPACKWrapper
+        LAPACKeWrapper
 )
 
 if ( SCAI_BLAS_NAME STREQUAL "MKL" )
