--- a/scai/kregistry/doc/conf.py.in
+++ b/scai/kregistry/doc/conf.py.in
@@ -2,19 +2,6 @@ import sys, os
 
 # -- General configuration -----------------------------------------------------
 
-# Add any Sphinx extension module names here, as strings. They can be extensions
-# coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
-extensions = ['sphinx.ext.mathjax', 'sphinx.ext.intersphinx']
-
-intersphinx_mapping = {
-    'scaicommon': ('${SCAI_COMMON_DOC_DIR}', None),
-    'scailogging': ('${SCAI_LOGGING_DOC_DIR}', None),
-    'scaitracing': ('${SCAI_TRACING_DOC_DIR}', None),
-    'scaitasking': ('${SCAI_TASKING_DOC_DIR}', None),
-    'scaihmemo': ('${SCAI_HMEMO_DOC_DIR}', None),
-    'scaikregistry': ('${SCAI_KREGISTRY_DOC_DIR}', None)
-}
-
 # The suffix of source filenames.
 source_suffix = '.rst'
 
@@ -22,17 +9,17 @@ source_suffix = '.rst'
 master_doc = 'index'
 
 # General information about the project.
-project = u'LAMA'
-copyright = u'2009-${LAMA_COPYRIGHT_YEAR} Fraunhofer Institute for Algorithms and Scientific Computing SCAI for Fraunhofer-Gesellschaft'
+project = u'SCAI Tasking'
+copyright = u'2009-${SCAI_TASKING_COPYRIGHT_YEAR} Fraunhofer Institute for Algorithms and Scientific Computing SCAI for Fraunhofer-Gesellschaft'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = '0.1'
+version = '${SCAI_TASKING_VERSION}'
 # The full version, including alpha/beta/rc tags.
-release = '${LAMA_VERSION} (${LAMA_VERSION_NAME})'
+release = '${SCAI_TASKING_VERSION} (${SCAI_TASKING_VERSION_NAME})'
 
 # The name of the Pygments (syntax highlighting) style to use.
 pygments_style = 'tango'
@@ -46,13 +33,13 @@ highlight_language = 'c++'
 html_theme = 'sphinxdoc'
 
 # Output file base name for HTML help builder.
-htmlhelp_basename = 'LAMAdoc'
+htmlhelp_basename = 'SCAI_TASKING_DOC'
 
 # -- Options for manual page output --------------------------------------------
 
 # One entry per manual page. List of tuples
 # (source start file, name, description, authors, manual section).
 man_pages = [
-    ('index', 'lama', u'LAMA Documentation',
+    ('index', 'SCAI_TASKING', u'SCAI TASKING Documentation',
      [u'Fraunhofer Institute for Algorithms and Scientific Computing SCAI for Fraunhofer-Gesellschaft'], 1)
 ]
