--- a/scai/tasking/doc/CMakeLists.txt
+++ b/scai/tasking/doc/CMakeLists.txt
@@ -31,21 +31,15 @@
  # @since 1.0.1
 ###
 
+#find_package ( Sphinx ${SCAI_FIND_PACKAGE_FLAGS} )
+
 ### SPHINX DOCUMENTATION ###
 
 if ( BUILD_DOC )
     ### install ###
     set ( LAMA_DOC_DIR "${CMAKE_SOURCE_DIR}/doc" )
     set ( SPHINX_BUILD_ROOT "${CMAKE_CURRENT_BINARY_DIR}" )
-    set ( SPHINX_INSTALL_ROOT ${CMAKE_INSTALL_PREFIX}/share/doc/scai-lama-${LAMA_VERSION} )
-    
-    # TODO: In future we need to use the proper version number of the specific subproject
-    set ( SCAI_COMMON_DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/scai-common-${LAMA_VERSION}/ )
-    set ( SCAI_LOGGING_DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/scai-logging-${LAMA_VERSION}/ )
-    set ( SCAI_TRACING_DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/scai-tracing-${LAMA_VERSION}/ )
-    set ( SCAI_TASKING_DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/scai-tasking-${LAMA_VERSION}/ )
-    set ( SCAI_HMEMO_DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/scai-hmemo-${LAMA_VERSION}/ )
-    set ( SCAI_KREGISTRY_DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/scai-kregistry-${LAMA_VERSION}/ )
+    set ( SPHINX_INSTALL_ROOT ${CMAKE_INSTALL_PREFIX}/share/doc/scai-tasking-${SCAI_TASKING_VERSION} )
     
     # Sphinx configuration file conf.py will be generated with correct LAMA version, copyright, etc.
     # must be in same directory as Sphinx source files
