--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -111,6 +111,7 @@ scai_project (
         OpenMP
         NonCopyable
         shared_ptr
+        TypeTraits
         unique_ptr
         weak_ptr
 )
