Iterativesolver: documentation changed

--- a/scai/lama/solver/CMakeLists.txt
+++ b/scai/lama/solver/CMakeLists.txt
@@ -51,7 +51,7 @@ set ( CLASSES
         BiCGstab
         CG
     	CGS
-    #   CGNE
+        CGNE
         CGNR
         DefaultJacobi
         GMRES
