Added building of modules in examples of common

--- a/scai/common/examples/Makefile
+++ b/scai/common/examples/Makefile
@@ -4,7 +4,7 @@ INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
-EXECUTABLE: Barrier.exe CriticalRegion.exe DemoFactory.exe DemoFactory1.exe DemoPointer.exe ExceptionDemo.exe UseModule.exe
+EXECUTABLE: Barrier.exe CriticalRegion.exe DemoFactory.exe DemoFactory1.exe DemoPointer.exe ExceptionDemo.exe UseModule.exe Module.so DummyModule.so
 
 .SUFFIXES:
 
@@ -13,10 +13,13 @@ EXECUTABLE: Barrier.exe CriticalRegion.exe DemoFactory.exe DemoFactory1.exe Demo
 .SUFFIXES: .o .so
 
 .o.exe: 
-	${CXX} -o $*.exe $*.o ${LD_FLAGS} 
+	${CXX} -o $*.exe $*.o ${LD_FLAGS}
+
+.o.so:
+	${CXX} -o $*.so $*.o ${LD_FLAGS} -shared
 	
 .cpp.o:
-	${CXX} ${CXX_FLAGS} ${INCLUDE_FLAGS} -c $*.cpp
+	${CXX} -fPIC ${CXX_FLAGS} ${INCLUDE_FLAGS} -c $*.cpp
 
 clean:
 	rm -rf *.exe *.o *.so
