Fixed problem with some FindJAVA modules

--- a/scai/tracing/gui/CMakeLists.txt
+++ b/scai/tracing/gui/CMakeLists.txt
@@ -4,7 +4,9 @@
 
 find_package( Java )
 
-if   ( Java_FOUND )
+# Note: Java_FOUND not set by some versions, so ask for JAVAC executable
+
+if ( Java_JAVAC_EXECUTABLE )
 
 	include( UseJava )
 	
@@ -44,4 +46,4 @@ if   ( Java_FOUND )
 	         PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
 	         DESTINATION bin )
 
-endif ( Java_FOUND )
+endif ( Java_JAVAC_EXECUTABLE )
