--- a/scai/CMakeLists.txt
+++ b/scai/CMakeLists.txt
@@ -36,7 +36,7 @@ cmake_minimum_required ( VERSION 2.8 )
 project ( LAMA_ALL CXX )
 set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 
-include ( VersionDefinition )
+#include ( VersionDefinition )
 
 ## general Settings for all projects
 include ( SetBuildFlags ) # VERBOSE, RPATH, LIB64
