--- a/scai/lama/doc/conf.py.in
+++ b/scai/lama/doc/conf.py.in
@@ -12,7 +12,8 @@ intersphinx_mapping = {
     'scaitracing': ('${SCAI_TRACING_DOC_DIR}', None),
     'scaitasking': ('${SCAI_TASKING_DOC_DIR}', None),
     'scaihmemo': ('${SCAI_HMEMO_DOC_DIR}', None),
-    'scaikregistry': ('${SCAI_KREGISTRY_DOC_DIR}', None)
+    'scaikregistry': ('${SCAI_KREGISTRY_DOC_DIR}', None),
+    'scaiblaskernel': ('${SCAI_BLASKERNEL_DOC_DIR}', None)
 }
 
 # The suffix of source filenames.
