--- a/scai/common/examples/make.inc.in
+++ b/scai/common/examples/make.inc.in
@@ -35,3 +35,4 @@ BOOST_INCLUDE_DIR=${BOOST_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
 SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_common
+EXECUTABLES=${EXAMPLE_EXECUTABLES}
