--- a/scai/tasking/examples/Makefile
+++ b/scai/tasking/examples/Makefile
@@ -4,7 +4,7 @@ INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
-EXECUTABLE: BenchTasking.exe ThreadPoolTest.exe Token.exe
+EXECUTABLE: ${EXECUTABLES}
 
 .SUFFIXES:
 
