--- a/scai/hmemo/examples/mic/CMakeLists.txt
+++ b/scai/hmemo/examples/mic/CMakeLists.txt
@@ -38,4 +38,7 @@
 foreach ( executable MICExample1 )
     add_executable( ${executable} ${executable}.cpp )
     target_link_libraries( ${executable} scai_hmemo )
+    set ( EXAMPLE_EXECUTABLES_MIC "${EXAMPLE_EXECUTABLES_MIC} ${executable}.exe" )
 endforeach ( executable )
+
+set ( EXAMPLE_EXECUTABLES_MIC "${EXAMPLE_EXECUTABLES_MIC}" PARENT_SCOPE )
